--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -198,7 +198,7 @@
                         <a routerLink='/developers'>{{'header.Developers' | translate}}</a>
                     </li>
 
-                    <div style="margin-right: 40px;" class="app-header__signup add-property" (click)="expand_collapse($event); addProperty();" >
+                    <div class="app-header__signup add-property" (click)="expand_collapse($event); addProperty();" >
                         <span class="icon">
                             <img src="../../assets/images/buildings.png" />
                         </span>
