--- a/src/app/shared/components/electronic-advisor/electronic-advisor.component.html
+++ b/src/app/shared/components/electronic-advisor/electronic-advisor.component.html
@@ -94,17 +94,53 @@
                                 </div>
                               </div>
                               
+                              <!-- unit type -->
+                              <div #type *ngIf="stepper == 2" class="location">
+                                <span> {{'advisor.unit type' | translate}} </span>
+
+                                <div class="dropdown">
+                                  <angular2-multiselect class="each-dropdown"
+                                      [data]="dropdownListUnitType" [(ngModel)]="selectedItemUnitType" 
+                                      [settings]="settingsUnitType">
+                                  </angular2-multiselect>
+
+                                </div>
+
+                                <div class="button-holder">              
+                                  <button type="submit" class="btn" (click)="continue(type)"> {{'button.actions.Apply & Continue' | translate}} </button>
+                                </div>
+                              </div>
+
+                              <!-- unit type preview -->
+                              <div >
+                                <div *ngIf="stepper > 2" class="location">
+
+                                  <div class="title">
+                                    {{'home.Real estate type' | translate}} 
+                                  </div>
+
+                                  <div class="location_preview">
+
+                                      <div class="location_card">
+                                        {{lang === 'en' ? selectedItemUnitType[0].name_en : selectedItemUnitType[0].name_ar }}                                
+                                      </div>
+
+                                  </div>
+
+                                </div>
+                              </div>
+
                               <!-- price -->
                               <div #price>
-                                <div *ngIf="stepper == 2" class="price">
+                                <div *ngIf="stepper == 3" class="price">
                                   <span> {{'advisor.price' | translate}} </span>
   
                                   <div class="inputs">
-                                    <input class="each-input" [(ngModel)]="min_price" placeholder="{{'quest.Min Price' | translate}}"
-                                    [allowNegative]="false" type="text" ngxNumberFormat="#,###,###,###" />    
+                                    <input class="each-input" [(ngModel)]="minValueInput" placeholder="{{ getPlaceholderMin() }}"
+                                    type="text" (keyup)="userChangeMin()"/>    
   
-                                    <input class="each-input" [(ngModel)]="max_price" placeholder="{{'quest.Max Price' | translate}}"
-                                      [allowNegative]="false" type="text" ngxNumberFormat="#,###,###,###" />
+                                    <input class="each-input" [(ngModel)]="maxValueInput" placeholder="{{ getPlaceholderMax() }}"
+                                       type="text" (keyup)="userChangeMax()"/>
                                   </div>
   
                                   <div class="button-holder">              
@@ -114,7 +150,7 @@
                               </div>
 
                               <!-- price preview -->
-                              <div *ngIf="stepper > 2" class="price">
+                              <div *ngIf="stepper > 3" class="price">
 
                                 <div class="title">
                                   {{'home.Price range' | translate}} 
@@ -122,13 +158,13 @@
 
                                 <div class="price_preview">
                                   <div class="price_card">
-                                    {{ abbreviateNumber(min_price) }}                       
+                                    {{ abbreviateNumber(min_price) }}  {{ getCurrency() }}                     
                                   </div>
 
                                   ~
 
                                   <div class="price_card">
-                                    {{ abbreviateNumber(max_price) }}                       
+                                    {{ abbreviateNumber(max_price) }}  {{ getCurrency() }}                     
                                   </div>
 
                                 </div>
@@ -137,24 +173,24 @@
                               
                               <!-- priority description -->
                               <div #priority_description style="display: flex; flex-direction: column; align-items: center;">
-                                <span *ngIf="stepper == 3" class="head-description"> {{'advisor.priority_description' | translate}} </span>
-                                <div *ngIf="stepper == 3" class="button-holder">              
+                                <span *ngIf="stepper == 4" class="head-description"> {{'advisor.priority_description' | translate}} </span>
+                                <div *ngIf="stepper == 4" class="button-holder">              
                                   <button type="submit" class="btn" (click)="continue(choose_top_priority)"> {{'button.actions.Apply & Continue' | translate}} </button>
                                 </div>
                               </div>
 
                               <!-- choose_top_priority -->
                               <div #choose_top_priority style="display: flex; flex-direction: column; align-items: center;">
-                                <span *ngIf="stepper == 4" class="head-description"> {{'advisor.choose_top_priority' | translate}} </span>
+                                <span *ngIf="stepper == 5" class="head-description"> {{'advisor.choose_top_priority' | translate}} </span>
                                 
                                 <!-- high priorites -->
-                                <div *ngIf="stepper == 4" class="priorites-list" style="width: 100%;"> 
+                                <div *ngIf="stepper == 5" class="priorites-list" style="width: 100%;"> 
                                   <div class="main">
                                     <div class="row margin_all">
                                       <!-- [class.selected]="item.selected === true" -->
                                       <div class="mt-3 custom-element" *ngFor="let item of getCriterias(1)">
                                           
-                                          <div class="box notClicked" (click)="selectItem(item)" *ngIf='item.selectedPriority != 1'>
+                                          <div class="box notClicked" (click)="selectItem(item, 1)" *ngIf='item.selectedPriority != 1'>
                                               <div class="insert">
                                                   <!-- <fa-icon [icon]="faCheckSquare"></fa-icon> -->
                                                   <img class="toggle" src="../../../../assets/images/not_checked.png" alt="..." />
@@ -187,25 +223,23 @@
                                   </div>
                                 </div>
 
-                                <div *ngIf="stepper == 4" class="button-holder">              
+                                <div *ngIf="stepper == 5" class="button-holder">              
                                   <button type="submit" class="btn" (click)="continue(price)"> {{'button.actions.Apply & Continue' | translate}} </button>
                                 </div> 
                               </div> 
 
                               <!-- set_top_priority -->
                               <div #set_top_priority style="display: flex; flex-direction: column; align-items: center;">
-                                <span *ngIf="stepper == 5" class="head-description"> {{'advisor.set_top_priority' | translate}} </span>
+                                <span *ngIf="stepper == 6" class="head-description"> {{'advisor.set_top_priority' | translate}} </span>
 
-                                <div *ngIf="stepper == 5" class="priorites-list" style="width: 100%;"> 
+                                <div *ngIf="stepper == 6" class="priorites-list" style="width: 100%;"> 
                                   <div class="main">
                                     <div class="margin_all">
                                       <!-- {{ scroll(mid) }} -->
 
-                                      
-
-                                      <div class="form-stepper" [ngStyle]="{'pointer-events': stepper > 5 ? 'none': 'initial' }">
-                                        <div *ngIf="stepper > 5" class="title">
-                                          Top priorities
+                                      <div class="form-stepper" [ngStyle]="{'pointer-events': stepper > 6 ? 'none': 'initial' }">
+                                        <div *ngIf="stepper > 6" class="title">
+                                          {{'advisor.top' | translate}}
                                         </div>
 
                                         <form [formGroup]="stepForm" autocomplete="off" novalidate #formRef="ngForm">
@@ -253,23 +287,23 @@
                                   </div>
                                 </div>
 
-                                <div *ngIf="stepper == 5" class="button-holder">              
-                                  <button type="submit" class="btn" (click)="continue(choose_low_priority)"> {{'button.actions.Apply & Continue' | translate}} </button>
+                                <div *ngIf="stepper == 6" class="button-holder">              
+                                  <button type="submit" class="btn" (click)="continue(price)"> {{'button.actions.Apply & Continue' | translate}} </button>
                                 </div> 
                               </div>
 
                               <!-- choose_low_priority -->
                               <div #choose_low_priority style="display: flex; flex-direction: column; align-items: center;">
-                                <span *ngIf="stepper == 6" class="head-description"> {{'advisor.choose_low_priority' | translate}} </span>
+                                <span *ngIf="stepper == 7" class="head-description"> {{'advisor.choose_low_priority' | translate}} </span>
                                 
                                 <!-- low priorites -->
-                                <div *ngIf="stepper == 6" class="priorites-list" style="width: 100%;"> 
+                                <div *ngIf="stepper == 7" class="priorites-list" style="width: 100%;"> 
                                   <div class="main">
                                     <div class="row margin_all">
                                       <!-- [class.selected]="item.selected === true" -->
                                       <div class="mt-3 custom-element" *ngFor="let item of getCriterias(2)">
                                           
-                                          <div class="box notClicked" (click)="selectItem(item)" *ngIf='item.selectedPriority != 2'>
+                                          <div class="box notClicked" (click)="selectItem(item, 2)" *ngIf='item.selectedPriority != 2'>
                                               <div class="insert">
                                                   <!-- <fa-icon [icon]="faCheckSquare"></fa-icon> -->
                                                   <img class="toggle" src="../../../../assets/images/not_checked.png" alt="..." />
@@ -302,16 +336,16 @@
                                   </div>
                                 </div>
 
-                                <div *ngIf="stepper == 6" class="button-holder">              
+                                <div *ngIf="stepper == 7" class="button-holder">              
                                   <button type="submit" class="btn" (click)="continue(price)"> {{'button.actions.Apply & Continue' | translate}} </button>
                                 </div> 
                               </div> 
 
                               <!-- set_low_priority -->
                               <div #set_low_priority style="display: flex; flex-direction: column; align-items: center;">
-                                <span *ngIf="stepper == 7" class="head-description"> {{'advisor.set_low_priority' | translate}} </span>
+                                <span *ngIf="stepper == 8" class="head-description"> {{'advisor.set_low_priority' | translate}} </span>
 
-                                <div *ngIf="stepper == 7" class="priorites-list" style="width: 100%;"> 
+                                <div *ngIf="stepper == 8" class="priorites-list" style="width: 100%;"> 
                                   <div class="main">
                                     <div class="margin_all">
                                       <!-- {{ scroll(mid) }} -->
@@ -360,7 +394,7 @@
                                   </div>
                                 </div>
 
-                                <div *ngIf="stepper == 7" class="button-holder">              
+                                <div *ngIf="stepper == 8" class="button-holder">              
                                   <button type="submit" class="btn" (click)="continue(choose_low_priority)"> {{'setupBuyerPriorities.Show Results' | translate}} </button>
                                 </div> 
                               </div>
