--- a/src/app/shared/components/electronic-advisor/electronic-advisor.component.scss
+++ b/src/app/shared/components/electronic-advisor/electronic-advisor.component.scss
@@ -146,6 +146,11 @@
                         .location_preview{
                             display: flex;
 
+                            @media (max-width: 450px) {
+                                flex-direction: column;
+                                align-items: center;
+                            }
+                            
                             .location_card{
                                 width: fit-content;
                                 background: #e1eceb;
@@ -153,9 +158,11 @@
                                 margin: 10px 15px;
                                 border-radius: 10px;
                                 border: 1px solid #184d47;
+                                display: flex;
+                                align-items: center;
 
                                 @media (max-width: 450px) {
-                                    padding: 10px 20px;
+                                    padding: 10px 15px;
                                 }
                                 
                             }
@@ -209,6 +216,11 @@
                                 margin: 10px 20px;
                                 border-radius: 10px;
                                 border: 1px solid #184d47;
+
+                                @media (max-width: 450px) {
+                                    padding: 10px 20px;
+                                    margin: 10px 5px;
+                                }
                             }
                         }
                     }
@@ -580,7 +592,7 @@
             border-radius: 10px;
     
             @media (max-width: 450px) {
-                padding: 10px 15px;
+                padding: 10px;
                 margin: 10px;
                 font-size: 14px;
                 // width: 100%;
