--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -47,20 +47,34 @@
             </div>
 
             <div class="other-options">
+                <a routerLink='/electronic-advisor'>
+                    <div class="each-option" (click)="tryItNow()">
+                        <div class="image-container advisor-img"><img class="image-options" src="../../assets/images/advisorT.png" alt="..."></div>
+                        <div class="text-options"> 
+                            
+                            {{ 'electronic advisor1' | translate }}
+                            <br> 
+                            {{ 'electronic advisor2' | translate }} 
 
-                <a routerLink='/how-it-works'>
-                    <div class="each-option">
-                        <div class="image-container how-it-works-img"><img class="image-options" src="../../assets/images/how_it_worksT.png" alt="..."></div>
-                        <div class="text-options"> {{ 'how it works' | translate }} </div>
+                            <div class="coming ai">
+                                {{'home.AI' | translate}}
+                            </div>
+
+                        </div>
                     </div>
                 </a>
 
                 <div class="separators" > </div>
 
-                <a routerLink='/electronic-advisor'>
-                    <div class="each-option" (click)="tryItNow()">
-                        <div class="image-container advisor-img"><img class="image-options" src="../../assets/images/advisorT.png" alt="..."></div>
-                        <div class="text-options"> {{ 'electronic advisor' | translate }} </div>
+                <a routerLink='/share-your-request'>
+                    <div class="each-option">
+                        <div class="image-container how-it-works-img"><img class="image-options" src="../../assets/images/share.png" alt="..."></div>
+                        <div class="text-options request"> 
+                            {{ 'home.share_your_quests_title1' | translate }} 
+                            <br>
+                            {{ 'home.share_your_quests_title2' | translate }} 
+
+                        </div>
                     </div>
                 </a>
 
@@ -353,114 +367,104 @@
         </div>
 
          <!-- (Featured Units)-->
-         <div *ngIf="recentlyAdded && recentlyAdded.length > 0">
-            <div class="recently-added">
-                <div class="row justify-content-center">
-
-                    <div class="col-xs-12 col-sm-10">
-
-                        <div class="section-head-center">
-                            <h2>
-                                <span class="top"></span>
-                                {{ 'home.Featured Units.title' | translate}}
-                                <span></span>
-                            </h2>
-                        </div>
-                        
-                        <div class="row mt-3 results" >
-                            <div *ngFor="let item of recentlyAdded" class="col-xs-12 col-sm-6 col-xl-4 hover">
-                                <!-- {{ print(item) }} -->
-                                <div class="card mb-3">
-                                    <div class="row g-0 card-content">
-                                        <div class="col-12" style="position: relative;">
-                                            <!-- <span class="bage">{{getPropose(item)}}</span>
-                                            <span (click)="navigateToSingleItem(item)" class="overlay"
-                                                style="border-radius: 20px;"></span>
-                                            <img src="{{item['image'] ? item['image']  : '../../../../assets/images/empty.jpeg'}}"
-                                                class="img-fluid back-img" alt="..."> -->
-        
-                                            <span (click)="navigateToSingleItem(item)" class="overlay"></span>
-                                            
-                                            <span style="cursor: pointer;" (click)="navigateToSingleItem(item)"
-                                                class="bage">{{getPropose(item)}}</span>
-                                            <img *ngIf="item['isFavorite']" (click)="toggleFavorite(item)" class="fav"
-                                                src="../../../../assets/images/Path 165 copy.png" alt="..." />
-                                            <img *ngIf="!item['isFavorite']" (click)="toggleFavorite(item)" class="fav"
-                                                src="../../../../assets/images/Path 165.png" alt="..." />
-                                            <img style="cursor: pointer;height: 230px;" (click)="navigateToSingleItem(item)"
-                                                src="{{setImagesSrc(item)}}" class="img-fluid" alt="...">
-                                        
-                                        </div>
-                                        
-                                        <div class="col-md-12">
-                                            <div class="card-body" style="cursor: pointer;" (click)="navigateToSingleItem(item)">
-                                                
-                                                <div class="row">
-                                                    <div class="col-12">
-                                                        <h6>
-                                                            {{ item['title'] }}
-                                                        </h6>
-                                                        
-                                                        <h5 class="card-title">
-                                                            <!-- <br> -->
-                                                            {{ numberWithCommas(item['price'])}}
-
-                                                            {{ getCurrency() }}
-                                                        </h5>
-
-                                                        
-                                                        <div class="space-between">
-                                                            <span class="location" >
-                                                                <img src="../../../../assets/images/noun_Location_1911856@2x.png"
-                                                                    alt="..." />
-                                                                {{lang === 'en' ? item['area_name_en'] : item['area_name_ar']}}
-                                                            </span>
-    
-                                                            <span class="date">
-                                                                <img src="../../../../assets/images/date.png"
-                                                                    alt="..." />
-                                                                    {{ 'home.Featured Units.listed_on' | translate }}   
-    
-                                                                    {{ setDate(item['created_at']) }}
-                                                            </span>
-                                                        </div>
-
-                                                      
-                                                    </div>
-                                                    <!-- <div class="col-4 float-end" style="position: relative;">
-                                                        <nz-progress class="float-end" nzType="circle"
-                                                            [nzPercent]="getScore(item['score'])"
-                                                            [nzStrokeColor]="{ '0%': '#EC6666','50%':'#C175E8','70%':'#79D2DE', '100%': '#147AD6' }">
-                                                        </nz-progress>
-                                                        <span class="score">{{getScore(item['score'])}}%</span>
-                                                    </div> -->
+        <div *ngIf="recentlyAdded && recentlyAdded.length > 0" class="recently-added">
+            <div class="section-head-center">
+                <h2>
+                    <span class="top"></span>
+                    {{ 'home.Featured Units.title' | translate}}
+                    <span></span>
+                </h2>
+            </div>
             
-                                                </div>
-                                                <div class="card-text">
-                                                    <div class="space-between">
-                                                        <div class="desc" *ngFor="let c of getItemCriteria(item['criteria']) | slice:0:4">
-                                                            <img class="img-icon" src="{{getCriteriaImageSrc(c)}}" alt=".." />
-                                                            {{getCriteriaOptions(c)}}
-                                                        </div>
-                                                    </div>
-                                                </div>
-        
+            <div class="results" >
+                <div *ngFor="let item of recentlyAdded" class="hover">
+                    <!-- {{ print(item) }} -->
+                    <div class="card mb-3">
+                        <div class="row g-0 card-content">
+                            <div class="col-12" style="position: relative; padding: 0px;">
+                                <!-- <span class="bage">{{getPropose(item)}}</span>
+                                <span (click)="navigateToSingleItem(item)" class="overlay"
+                                    style="border-radius: 20px;"></span>
+                                <img src="{{item['image'] ? item['image']  : '../../../../assets/images/empty.jpeg'}}"
+                                    class="img-fluid back-img" alt="..."> -->
+
+                                <span (click)="navigateToSingleItem(item)" class="overlay"></span>
+                                
+                                <span style="cursor: pointer;" (click)="navigateToSingleItem(item)"
+                                    class="bage">{{getPropose(item)}}</span>
+                                <img *ngIf="item['isFavorite']" (click)="toggleFavorite(item)" class="fav"
+                                    src="../../../../assets/images/Path 165 copy.png" alt="..." />
+                                <img *ngIf="!item['isFavorite']" (click)="toggleFavorite(item)" class="fav"
+                                    src="../../../../assets/images/Path 165.png" alt="..." />
+                                <img style="cursor: pointer;height: 230px;" (click)="navigateToSingleItem(item)"
+                                    src="{{setImagesSrc(item)}}" class="img-fluid" alt="...">
+                            
+                            </div>
+                            
+                            <div class="col-md-12">
+                                <div class="card-body" style="cursor: pointer;" (click)="navigateToSingleItem(item)">
+                                    
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <h6>
+                                                {{ item['title'] }}
+                                            </h6>
+                                            
+                                            <h5 class="card-title">
+                                                <!-- <br> -->
+                                                {{ numberWithCommas(item['price'])}}
+
+                                                {{ getCurrency() }}
+                                            </h5>
+
+                                            
+                                            <div class="space-between">
+                                                <span class="location" >
+                                                    <img src="../../../../assets/images/noun_Location_1911856@2x.png"
+                                                        alt="..." />
+                                                    {{lang === 'en' ? item['area_name_en'] : item['area_name_ar']}}
+                                                </span>
+
+                                                <span class="date">
+                                                    <img src="../../../../assets/images/date.png"
+                                                        alt="..." />
+                                                        {{ 'home.Featured Units.listed_on' | translate }}   
+
+                                                        {{ setDate(item['created_at']) }}
+                                                </span>
+                                            </div>
+
+                                            
+                                        </div>
+                                        <!-- <div class="col-4 float-end" style="position: relative;">
+                                            <nz-progress class="float-end" nzType="circle"
+                                                [nzPercent]="getScore(item['score'])"
+                                                [nzStrokeColor]="{ '0%': '#EC6666','50%':'#C175E8','70%':'#79D2DE', '100%': '#147AD6' }">
+                                            </nz-progress>
+                                            <span class="score">{{getScore(item['score'])}}%</span>
+                                        </div> -->
+
+                                    </div>
+                                    <div class="card-text">
+                                        <div class="space-between">
+                                            <div class="desc" *ngFor="let c of getItemCriteria(item['criteria']) | slice:0:4">
+                                                <img class="img-icon" src="{{getCriteriaImageSrc(c)}}" alt=".." />
+                                                {{getCriteriaOptions(c)}}
                                             </div>
                                         </div>
                                     </div>
+
                                 </div>
-        
                             </div>
-        
                         </div>
                     </div>
-
 
                 </div>
 
             </div>
 
         </div>
+
 
         <!-- Top Developers-->
         <div *ngIf="top_developers && top_developers.length > 0" class="top-developers">
@@ -679,7 +683,7 @@
                                 <!-- {{ print(item) }} -->
                                 <div class="card mb-3">
                                     <div class="row g-0 card-content">
-                                        <div class="col-12" style="position: relative;">
+                                        <div class="col-12" style="position: relative; padding: 0px;">
                                             <!-- <span class="bage">{{getPropose(item)}}</span>
                                             <span (click)="navigateToSingleItem(item)" class="overlay"
                                                 style="border-radius: 20px;"></span>
@@ -777,7 +781,8 @@
 
             <div style="    display: flex;
             flex-direction: column;
-            justify-content: space-between;">
+            justify-content: space-between;
+            align-items: center;">
                 <div class="section-head-left" style="margin: 0% 5%;">
                     <h2>
                         <span class="top"></span>
@@ -798,6 +803,10 @@
                     <!-- <div class="col downlaod">
                 </div> -->
                 </div>
+
+                <div class="coming">
+                    {{'footer.coming_soon' | translate}}
+                </div>
             </div>
             <div class="col-12 col-lg-6 order-0 order-lg-1 app">
                 <div class="holder">
@@ -806,6 +815,7 @@
                     <img class="iphone-sm" src="../../../../assets/images/Single mockup.png" alt="..." />
                 </div>
             </div>
+
         </div>
         
         <!-- Blogs -->
