--- a/src/app/shared/components/login-developer/login-developer.component.scss
+++ b/src/app/shared/components/login-developer/login-developer.component.scss
@@ -97,6 +97,69 @@
                                     &.description{
                                         width: 96%;
                                     }
+
+                                    &.upload{
+                                        display: flex;
+                                        justify-content: center;
+                                        width: 100%;
+                                        flex-wrap: wrap;
+        
+                                        .each-upload{
+                                            // width: 50%;
+        
+                                            &.logo{
+                                                width: 100%;
+                                                display: flex;
+                                                flex-direction: column;
+                                                align-items: center;
+                                            }
+        
+                                            @media (max-width: 450px) {
+                                                width: 100%;
+                                                margin: 20px 0px;
+                                            }
+        
+                                            .avatar {
+                                                display: flex;
+                                                flex-wrap: wrap;
+                                                justify-content: center;
+                                                width: fit-content;
+                                                margin: 0 auto;
+                                                position: relative;
+                                                cursor: pointer;
+                                                .icon {
+                                                    position: absolute;
+                                                    right: 0;
+                                                    bottom: 10px;
+                                                    background-color: #99B2AF;
+                                                    padding: 7px;
+                                                    border-radius: 50%;
+                                                    width: 35px;
+                                                    height: 35px;
+                                                }
+                                                .main-img{
+                                                    width: 225px;
+                                                    height: 150px;
+                                                    border-radius: 20px;
+                                                    border: 3px solid #FF725F;
+                                                }
+        
+                                                &.project-photo{
+                                                    margin: 0;
+                                                    cursor: initial;
+                                                }
+        
+                                                .project-photo{
+                                                    width: 120px;
+                                                    height: 80px;
+                                                    margin: 5px;
+                                                    border-radius: 10px;
+                                                    border: 2px solid #FF725F;
+                                                    cursor: initial;
+                                                }
+                                            }
+                                        }
+                                    }
                                 }
 
                             }
@@ -111,9 +174,13 @@
                         .submit-btn {
                             display: block;
                             width: 100%;
-                            margin-top: 10%;
+                            // margin-top: 10%;
                             border-radius: 10px;
                             padding: 12px 0px;
+
+                            &.login{
+                                width: 30%;
+                            }
                         }
 
                         .resendOtp {
