--- a/src/app/shared/components/results/results.component.scss
+++ b/src/app/shared/components/results/results.component.scss
@@ -168,62 +168,71 @@
         
                 .score {
                     position: absolute;
-                    right: 36%;
-                    top: 20%;
+
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%,-75%);
+
+                    // right: 36%;
+                    // top: 20%;
         
-                    @media (max-width: 320px) {
-                        right: 17%;
-                    }
+                    // @media (max-width: 320px) {
+                    //     right: 17%;
+                    // }
         
-                    @media (max-width: 375px) {
-                        right: 32%;
-                    }
+                    // @media (max-width: 375px) {
+                    //     right: 32%;
+                    // }
         
-                    @media (max-width: 450px) {
-                        right: 32%;
-                    }
+                    // @media (max-width: 450px) {
+                    //     right: 32%;
+                    // }
         
-                    @media (max-width: 768px) {
-                        right: 41%;
-                    }
+                    // @media (max-width: 768px) {
+                    //     right: 41%;
+                    // }
         
-                    @media (max-width: 1024px) {
-                        right: 7%;
-                    }
+                    // @media (max-width: 1024px) {
+                    //     right: 7%;
+                    // }
         
-                    @media (max-width: 1440px) {
-                        right: 34%;
-                    }
+                    // @media (max-width: 1440px) {
+                    //     right: 34%;
+                    // }
                     }
                 .score1 {
                     position: absolute;
-                    right: 31%;
-                    top: 50%;
+                    // right: 31%;
+                    // top: 50%;
                     font-size: x-small;
         
-                    @media (max-width: 320px) {
-                        right: 17%;
-                    }
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%,25%);
+
+                    // @media (max-width: 320px) {
+                    //     right: 17%;
+                    // }
         
-                    @media (max-width: 375px) {
-                        right: 32%;
-                    }
+                    // @media (max-width: 375px) {
+                    //     right: 32%;
+                    // }
         
-                    @media (max-width: 450px) {
-                        right: 32%;
-                    }
+                    // @media (max-width: 450px) {
+                    //     right: 32%;
+                    // }
         
-                    @media (max-width: 768px) {
-                        right: 41%;
-                    }
+                    // @media (max-width: 768px) {
+                    //     right: 41%;
+                    // }
         
-                    @media (max-width: 1024px) {
-                        right: 7%;
-                    }
+                    // @media (max-width: 1024px) {
+                    //     right: 7%;
+                    // }
         
-                    @media (max-width: 1440px) {
-                        right: 28%;
-                    }
+                    // @media (max-width: 1440px) {
+                    //     right: 28%;
+                    // }
                     }
         
                 .space-between{
